# derydocaengine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DerydocaEngine.manual.sln  DerydocaEngine.sln  LICENSE  README.md  UpgradeLog.htm  copyEngineResources.bat  engineSettings.json  engineSettings.yaml  generateProjects.bat  imgui.ini  makeFont.bat  premake5.lua  processResourceFiles.bat  vcpkg.json
DerydocaEngine/: AnimationChannel.h  AnimationData.cpp  AnimationData.h  AnimationResourceSerializer.cpp  AnimationResourceSerializer.h  AssimpUtils.cpp  AssimpUtils.h  BezierCurveRenderer.cpp  BezierCurveRenderer.h  BezierPatchMesh.cpp  BezierPatchMesh.h  BezierPatchMeshFileLoader.cpp  BezierPatchMeshFileLoader.h  BezierPatchMeshFileSerializer.cpp  BezierPatchMeshFileSerializer.h  BezierPatchMeshResourceSerializer.cpp  BezierPatchMeshResourceSerializer.h  BloomFilter.cpp  BloomFilter.h  Bone.cpp  Bone.h  ButtonState.cpp  ButtonState.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Clock.cpp  Clock.h  Color.h  CommandLineArgs.cpp  CommandLineArgs.h  CubeMap.cpp  CubeMap.h  CubemapResource.h  CubemapResourceSerializer.cpp  CubemapResourceSerializer.h  DebugLine.cpp  DebugLine.h  (+218 more)
DerydocaEngine.Components/: CMakeLists.txt  DerydocaEngine.Components.manual.vcxproj  DerydocaEngine.Components.manual.vcxproj.filters  DerydocaEngine.Components.vcxproj  DerydocaEngine.Components.vcxproj.filters
DerydocaEngine.Components.Editor/: CMakeLists.txt  DerydocaEngine.Components.Editor.manual.vcxproj  DerydocaEngine.Components.Editor.vcxproj  DerydocaEngine.Components.Editor.vcxproj.filters
DerydocaEngine.Components.Editor/src/: ComponentsEditorPch.cpp  EditorComponentsPch.cpp  EditorComponentsPch.h
DerydocaEngine.Components.Editor/src/Components/: AnimationViewerWindow.cpp  AnimationViewerWindow.h  EditorCameraWindow.cpp  EditorCameraWindow.h  EditorWindowComponent.cpp  EditorWindowComponent.h  EngineAssetBrowser.cpp  EngineAssetBrowser.h  EngineConsole.cpp  EngineConsole.h  GameComponentInspectorWindow.cpp  GameComponentInspectorWindow.h  ImGuiDemoWindow.cpp  ImGuiDemoWindow.h  InspectorWindow.cpp  InspectorWindow.h  SceneHierarchyWindow.cpp  SceneHierarchyWindow.h  SceneViewerWindow.cpp  SceneViewerWindow.h
DerydocaEngine.Components.Editor/src/Editor/: TerrainInspector.cpp  TerrainInspector.h
DerydocaEngine.Components.Editor/x64/Debug/: DerydocaEngine.Components.Editor.idb
DerydocaEngine.Components/src/: EngineComponentsPch.cpp  EngineComponentsPch.h
DerydocaEngine.Components/src/Components/: Camera.cpp  Camera.h  EditorWindowComponent.cpp  EditorWindowComponent.h  EngineAssetBrowser.cpp  EngineConsole.cpp  EngineGuiDockSpace.cpp  EngineGuiDockSpace.h  FrameStats.cpp  FrameStats.h  GameComponent.cpp  GameComponent.h  GameComponentFactory.cpp  GameComponentFactory.h  KeyboardMover.cpp  KeyboardMover.h  Light.cpp  Light.h  MaterialRefresher.cpp  MaterialRefresher.h  MeshRenderer.cpp  MeshRenderer.h  RendererComponent.cpp  RendererComponent.h  Rotator.cpp  Rotator.h  ScreenshotUtil.cpp  ScreenshotUtil.h  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  Terrain.cpp  Terrain.h  TextRenderer.cpp  TextRenderer.h  Transform.cpp  Transform.h  WasdMover.cpp  WasdMover.h
DerydocaEngine.Components/src/ComponentsExt/: BezierCurveRenderer.cpp  BezierCurveRenderer.h  BloomFilter.cpp  BloomFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  GammaCorrectionFilter.cpp  GammaCorrectionFilter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  ImageProjector.cpp  ImageProjector.h  MultisampleSwitch.cpp  MultisampleSwitch.h  NightVisionFilter.cpp  NightVisionFilter.h  NoiseTexture.cpp  NoiseTexture.h  ParticleContinuousFountain.cpp  ParticleContinuousFountain.h  ParticleFountain.cpp  ParticleFountain.h  ParticleInstanced.cpp  ParticleInstanced.h  ParticleSystem.cpp  ParticleSystem.h  ShaderSubroutineSwitcher.cpp  ShaderSubroutineSwitcher.h  TessellatedMeshRenderer.cpp  TessellatedMeshRenderer.h  TessellatingQuad.cpp  TessellatingQuad.h  WaveDisplacement.cpp  WaveDisplacement.h  WoodSliceTexture.cpp  WoodSliceTexture.h
DerydocaEngine.Editor/: CMakeLists.txt  DerydocaEngine.Editor.manual.vcxproj  DerydocaEngine.Editor.manual.vcxproj.filters  DerydocaEngine.Editor.vcxproj  DerydocaEngine.Editor.vcxproj.filters
DerydocaEngine.Editor.UI/: CMakeLists.txt  DerydocaEngine.Editor.UI.cpp  DerydocaEngine.Editor.UI.manual.vcxproj  DerydocaEngine.Editor.UI.manual.vcxproj.filters  DerydocaEngine.Editor.UI.vcxproj  DerydocaEngine.Editor.UI.vcxproj.filters
DerydocaEngine.Editor.UI/src/: EditorPch.h  main.cpp  stbi_impl.cpp
DerydocaEngine.Editor.UI/src/Editor/: CommandLineArgs.cpp  (+3 more)
DerydocaEngine.Editor/src/: EditorPch.h
DerydocaEngine.Test/: CMakeLists.txt  DerydocaEngine.Test.manual.vcxproj  DerydocaEngine.Test.vcxproj  DerydocaEngine.Test.vcxproj.filters
DerydocaEngine.Test/src/: Color.cpp  EngineTestPch.cpp  EngineTestPch.h  GameObject.cpp  ObjectLibraryTest.cpp  main.cpp  stbi_impl.cpp
DerydocaEngine/Debug/: vc141.idb
DerydocaEngine/lib/: SOIL.lib  libyaml-cppmd.lib  yaml.lib
DerydocaEngine/src/: AnimationChannel.h  AnimationData.cpp  AnimationResource.h  AnimationResourceSerializer.cpp  AssimpUtils.cpp  BezierCurveRenderer.cpp  BezierCurveRenderer.h  BezierPatchMeshFileLoader.cpp  BezierPatchMeshFileSerializer.cpp  BezierPatchMeshResourceSerializer.cpp  BezierPatchMeshResourceSerializer.h  BloomFilter.cpp  BloomFilter.h  Bone.cpp  Bone.h  Camera.cpp  Camera.h  CameraManager.cpp  Clock.cpp  Color.h  CubemapResource.h  CubemapResourceSerializer.cpp  DebugVisualizer.cpp  DebugVisualizer.h  DerydocaEngineCommonPch.h  DeviceManager.cpp  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Editor.cpp  Editor.h  EnginePch.cpp  EnginePch.h  EngineSettings.cpp  EngineSettings.h  FileSerializerLibrary.cpp  FontFace.cpp  (+115 more)
derydoca-core/: CMakeLists.txt
derydoca-core/src/: DeviceManager.cpp
derydoca-editor-ui/: CMakeLists.txt
derydoca-editor-ui/src/: main.cpp
(+1306 files in other folders)
